[WIP] Implement templates

--- a/hubstry/templates/home.jinja2
+++ b/hubstry/templates/home.jinja2
@@ -1,5 +1,11 @@
 {% extends "layout.jinja2" %}
 
-{% block body %}
-  Hello World!
-{% endblock body %}
+{% block topbar %}
+{% endblock topbar %}
+
+{% block content %}
+  <p>hello</p>
+{% endblock content %}
+
+{% block bottom-bar %}
+{% endblock bottom-bar %}
