--- a/hubstry/templates/layout.jinja2
+++ b/hubstry/templates/layout.jinja2
@@ -9,9 +9,29 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 {% endblock css %}
 {% block scripts %}
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+  </script>
 {% endblock scripts %}
 
 {% block body %}
+   <div class="container">
+     {% block top %}
+       <nav class="navbar navbar-default navbar-fixed-top">
+	 {% block topbar %}
+	 {% endblock topbar %}
+       </nav>
+     {% endblock top %}
+     <div class="container center-block text-center">
+       {% block content %}
+	 <!-- Content -->
+       {% endblock content %}
+     </div>
+     {% block footer %}
+       <nav class="navbar navbar-default navbar-fixed-bottom">
+	 {% block bottom-bar %}
+	 {% endblock bottom-bar %}
+       </nav>
+     {% endblock footer %}
+   </div>
 {% endblock body %}
