--- a/hubstry/templates/home.jinja2
+++ b/hubstry/templates/home.jinja2
@@ -1,11 +1,11 @@
 {% extends "layout.jinja2" %}
 
-{% block topbar %}
-{% endblock topbar %}
+{% block top_bar %}
+{% endblock top_bar %}
 
 {% block content %}
   <p>hello</p>
 {% endblock content %}
 
-{% block bottom-bar %}
-{% endblock bottom-bar %}
+{% block bottom_bar %}
+{% endblock bottom_bar %}
