--- a/hubstry/templates/layout.jinja2
+++ b/hubstry/templates/layout.jinja2
@@ -7,6 +7,7 @@
 	crossorigin="anonymous" />
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="/static/css/main.css">
 {% endblock css %}
 {% block scripts %}
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -15,23 +16,19 @@
 {% endblock scripts %}
 
 {% block body %}
-   <div class="container">
-     {% block top %}
-       <nav class="navbar navbar-default navbar-fixed-top">
-	 {% block topbar %}
-	 {% endblock topbar %}
-       </nav>
-     {% endblock top %}
-     <div class="container center-block text-center">
-       {% block content %}
-	 <!-- Content -->
-       {% endblock content %}
-     </div>
-     {% block footer %}
-       <nav class="navbar navbar-default navbar-fixed-bottom">
-	 {% block bottom-bar %}
-	 {% endblock bottom-bar %}
-       </nav>
-     {% endblock footer %}
-   </div>
+  <div class="body">
+    <div class="jumbotron">
+    {% block top %}
+    {% endblock top %}
+    </div>
+    <div class="container">
+      {% block content %}
+	<!-- Content -->
+      {% endblock content %}
+    </div>
+    {% block footer %}
+      <nav class="navbar navbar-default navbar-fixed-bottom">
+      </nav>
+    {% endblock footer %}
+  </div>
 {% endblock body %}
