centered text on layout's jumbotron

--- a/hubstry/templates/layout.jinja2
+++ b/hubstry/templates/layout.jinja2
@@ -17,9 +17,10 @@
 
 {% block body %}
   <div class="body">
-    <div class="jumbotron">
-    {% block top %}
-    {% endblock top %}
+    <div class="jumbotron text-center">
+      <h3>Hubstry - Docker Registry Front-End</h3>
+      {% block top %}
+      {% endblock top %}
     </div>
     <div class="container">
       {% block content %}
