Some improvements on layout

--- a/hubstry/templates/home.jinja2
+++ b/hubstry/templates/home.jinja2
@@ -1,5 +1,10 @@
 {% extends "layout.jinja2" %}
 
 {% block content %}
-  <p>hello</p>
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-8">
+      <p>hello</p>
+      <p>hi</p>
+    </div>
+  </div>
 {% endblock content %}
